# rms

./: CMakeLists.txt  README.md  benchmark.py  project.yml
src/: rmscalc.c  rmscalc.h
test/: test_rmscalc.c
